--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,7 +15,7 @@ jobs:
 
     steps:
       - if: runner.os == 'linux'
-        name: install alsa and udev
+        name: Install alsa and udev
         run: sudo apt-get update; sudo apt-get install --no-install-recommends libasound2-dev libudev-dev
       - uses: actions/checkout@v4
       - uses: Swatinem/rust-cache@v2
