--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,11 @@ resolver = "2"
 array-init = "2.1.0"
 arrayvec = "0.7.4"
 bevy = "0.13.2"
+bitvec = "1.0.1"
 enum-map = "2.7.3"
 enumset = "1.1.3"
 itertools = "0.13.0"
+replace_with = "0.1.7"
 
 unbound-shared = { path = "unbound-shared" }
 
