--- a/unbound-shared/Cargo.toml
+++ b/unbound-shared/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 array-init.workspace = true
 arrayvec.workspace = true
 bevy.workspace = true
+bitvec.workspace = true
 enum-map.workspace = true
 enumset.workspace = true
 itertools.workspace = true
+replace_with.workspace = true
