--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ array-init = "2.1.0"
 arrayvec = "0.7.4"
 bevy = "0.13.2"
 bitvec = "1.0.1"
+derive-where = "1.2.7"
 enum-map = "2.7.3"
 enumset = "1.1.3"
 itertools = "0.13.0"
