--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,21 @@
 [workspace]
-members = ["unbound-client", "unbound-server", "unbound-shared"]
-default-members = ["unbound-client", "unbound-shared"]
+members = ["unbound-client", "unbound-lib", "unbound-server", "unbound-shared"]
+default-members = ["unbound-client", "unbound-lib", "unbound-shared"]
 resolver = "2"
 
 [workspace.dependencies]
 array-init = "2.1.0"
 arrayvec = "0.7.4"
-bevy = "0.13.2"
+# bevy = "0.13.2"
 bitvec = "1.0.1"
 derive-where = "1.2.7"
 enum-map = "2.7.3"
 enumset = "1.1.3"
+glam = "0.25.0"        # bevy is still on 0.25.0
 itertools = "0.13.0"
 replace_with = "0.1.7"
 
+unbound-lib = { path = "unbound-lib" }
 unbound-shared = { path = "unbound-shared" }
 
 [profile.dev]
