--- a/unbound-server/Cargo.toml
+++ b/unbound-server/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+# bevy.workspace = true
+unbound-lib.workspace = true
 unbound-shared.workspace = true
