--- a/unbound-shared/Cargo.toml
+++ b/unbound-shared/Cargo.toml
@@ -4,12 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-array-init.workspace = true
-arrayvec.workspace = true
-bevy.workspace = true
-bitvec.workspace = true
-derive-where.workspace = true
-enum-map.workspace = true
-enumset.workspace = true
-itertools.workspace = true
-replace_with.workspace = true
+# bevy.workspace = true
+unbound-lib.workspace = true
