--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,4 +32,4 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: fmt
-        run: cargo fmt --all --check
+        run: cargo +nightly fmt --all --check
