--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,5 +33,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - name: Install Rust toolchain
+        run: |
+          rustup update --no-self-update
+          rustup component add rustfmt --toolchain nightly
       - name: fmt
         run: cargo +nightly fmt --all --check
