--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,5 +33,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - name: Install Rust toolchain
+        run: rustup toolchain install nightly --no-self-update --allow-downgrade -c rustfmt
       - name: fmt
-        run: cargo fmt --all --check
+        run: cargo +nightly fmt --all --check
