--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,13 @@ resolver = "2"
 [workspace.dependencies]
 array-init = "2.1.0"
 arrayvec = "0.7.6"
-# bevy = "0.13.2"
+# bevy = "0.15.1"
 bitvec = "1.0.1"
 educe = "0.6.0"
 enum-map = "2.7.3"
 enumset = "1.1.5"
-glam = "0.25.0"      # bevy is still on 0.25.0
-itertools = "0.13.0"
+glam = "0.29.2"
+itertools = "0.14.0"
 
 unbound-lib = { path = "unbound-lib" }
 unbound-shared = { path = "unbound-shared" }
